# m5stack-freertos-tft

./: .gitmodules  CMakeLists.txt  README.md
src/: tft_demo.c
